# licenser-h

./: .gitignore  LICENSE  README.md  licenser.py  pyproject.toml  setup.py
src/: __init__.py  add_license.py  choose_license.py  detect_license.py  full_licenses.py  get_license.py  main.py
tests/: test_add_license.py
