[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "licenser-h"
version = "0.2"
authors = [
  { name="Alex Frutkin", email="frutkinalexander@gmail.com" },
]
description = "A simple tool for adding licenses and license headers to your projects."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = [
    "scripts",
    "dependencies",
]

[project.urls]
Homepage = "https://github.com/yummydirtx/Licenser"
Issues = "https://github.com/yummydirtx/Licenser/issues"